# fpl-prediction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
configs/: config.yaml
configs/data/: fpl_data.yaml
configs/experiment/: baseline.yaml
configs/model/: xgboost.yaml
configs/training/: default.yaml
src/: __init__.py
src/fpl/: __init__.py  data.py  model.py  train.py
tests/: test_data.py  test_model.py
